app/client/src/style/components/_toast.scss
.v-toast {
	display: flex;
	flex-direction: column;
	gap: 5px;
	opacity: 1;
	min-width: 250px; /* Set a default minimum width */
	margin-left: -125px; /* Divide value of min-width by 2 */
	color: #fff; /* White text color */
	text-align: center; /* Centered text */
	border-radius: 2px; /* Rounded borders */
	padding: 16px; /* Padding */
	position: fixed; /* Sit on top of the screen */
	pointer-events: none;
	z-index: 9999;
	left: 50%; /* Center the snackbar */
	bottom: 30px; /* 30px from the bottom */
}
.v-toast > * {
	pointer-events: auto;
}
.v-toast.v-toast--bottom {
	pointer-events: none;
	z-index: 9999;
}
.v-toast.v-toast--bottom > * {
	pointer-events: auto;
}
.v-toast__item {
	background: rgb(201, 124, 72);
	background: linear-gradient(0deg, rgba(201, 124, 72, 1) 15%, rgba(178, 96, 58, 1) 100%);
	border: 1px solid #8d3e17;
	box-shadow:
		2px 4px 9px 0 rgba(125, 86, 36, 0.5),
		inset 0 0 0 1px #f9c825,
		inset 0 0 4px 1px #8d3e17;
	cursor: pointer;
	display: flex;
	align-items: center;
	gap: 10px;
	padding-left: 1em;
	padding-right: 1em;
	.v-toast__icon {
		background: url('../../assets/icons/small_edit.webp') no-repeat;
		width: 12px;
		min-width: auto;
		height: 12px;
		background-size: 12px;
		margin-left: 0;
	}
	.v-toast__text {
		padding: 0;
		.text-icon {
			width: 18px;
			vertical-align: bottom;
		}
	}
	&.v-toast__item--error .v-toast__icon {
		background: url('../../assets/icons/small_delete.webp') no-repeat;
	}
	&.v-toast__item--success .v-toast__icon {
		background: url('../../assets/icons/small_missDone.webp') no-repeat;
	}
}
.v-enter-active {
	transition:
		opacity 0.5s ease,
		top 0.5s ease;
	animation: shake 0.5s;
	animation-delay: 0.35s;
}
.v-leave-active {
	transition:
		opacity 0.5s ease,
		top 0.5s ease;
}
.v-enter-from {
	top: 0;
	opacity: 0;
}
.v-leave-to {
	top: 30px;
	opacity: 0;
}
@keyframes shake {
	0% {
		transform: translate(1px, 1px) rotate(0deg);
	}
	10% {
		transform: translate(-1px, -2px) rotate(-1deg);
	}
	20% {
		transform: translate(-3px, 0px) rotate(1deg);
	}
	30% {
		transform: translate(3px, 2px) rotate(0deg);
	}
	40% {
		transform: translate(1px, -1px) rotate(1deg);
	}
	50% {
		transform: translate(-1px, 2px) rotate(-1deg);
	}
	60% {
		transform: translate(-3px, 1px) rotate(0deg);
	}
	70% {
		transform: translate(3px, 1px) rotate(-1deg);
	}
	80% {
		transform: translate(-1px, -1px) rotate(1deg);
	}
	90% {
		transform: translate(1px, 2px) rotate(0deg);
	}
	100% {
		transform: translate(1px, -2px) rotate(-1deg);
	}
}

